2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Makes easier to change to
	profile order.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.c: Try to guess the
	server from the jid only if we are using the jabber profile. When we
	guessed a server don't forget to set the "server" McAccount param,
	setting the entry's text is not enough.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Improve the sort function
	a bit to have Jabber before GTalk.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.glade:
	* libempathy-gtk/empathy-accounts-dialog.c: Update the Enable/Disable
	button even if there is no account selected. Set it insensitive if no
	account is selected. Fixes bug #459012.

2007-07-27 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Sort profiles to have
	free protocols first. Fixes bug #460605.

2007-07-27 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-message.c:
	* libempathy/empathy-message.h:
	* libempathy/empathy-log-manager.c: Add message type in log files.
	Fixes bug #459579.

	* doc/*: Updated.

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Add missing file
	libempathy-gtk/empathy-account-widget-msn.glade.

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.glade:
	* libempathy-gtk/empathy-account-widget-jabber.c: Hide
	"advanced options" for jabber in a GtkExpander. Fixes bug #459168
	(Guillaume Desmottes).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-new-chatroom-dialog.c:
	* libempathy/empathy-tp-roomlist.c: Fix Room listing. Fixes bug #460416
	(Sjoerd Simons).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/Makefile.am:
	* libempathy/Makefile.am: